if(${USE_CUDA})
set_source_files_properties(reader_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_utils_io_reader_tests.test reader_tests.cc)
target_link_libraries(sparsebase_utils_io_reader_tests.test  sparsebase)
target_link_libraries(sparsebase_utils_io_reader_tests.test  gtest gtest_main)
add_test(NAME sparsebase_utils_io_reader_tests.test COMMAND sparsebase_utils_io_reader_tests.test)

if(${USE_CUDA})
set_source_files_properties(writer_tests.cc PROPERTIES LANGUAGE CUDA)
endif()
add_executable(sparsebase_utils_io_writer_tests.test writer_tests.cc)
target_link_libraries(sparsebase_utils_io_writer_tests.test  sparsebase)
target_link_libraries(sparsebase_utils_io_writer_tests.test  gtest gtest_main)
add_test(NAME sparsebase_utils_io_writer_tests.test COMMAND sparsebase_utils_io_writer_tests.test)
